--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Arimo:700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <title>Slay the Beys</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
